--- a/AplicacionGimnasio/pom.xml
+++ b/AplicacionGimnasio/pom.xml
@@ -85,6 +85,11 @@
 			<artifactId>hibernate-entitymanager</artifactId>
 			<version>5.6.5.Final</version>
 		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger2</artifactId>
+			<version>2.7.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
